# Dynamxiel_Template-Tutorials

./: README.md
my_dynamixel_workbench/: CMakeLists.txt  package.xml
my_dynamixel_workbench/cfg/: ParallelRobot.yaml  SerialRobot.yaml  Wing.yaml  motorInit01.yaml  test.yaml  trajectory_01.yaml
my_dynamixel_workbench/data/: stateStation.xls  stateTrack.xls
my_dynamixel_workbench/include/: RL_3DofSerialRobot.h  my_dxl_controller.h  my_dxl_master.h  my_operator.h  parallel_robot_master.h
my_dynamixel_workbench/include/my_dynamixel_workbench/: my_dxl_master.h  trajectory_generator.h
my_dynamixel_workbench/launch/: RL_3DofSerialRobot.launch  parallel_robot_operator.launch  start_master.launch  start_multi_motor_controller.launch  start_operator.launch  start_parallel_robot.launch
my_dynamixel_workbench/src/: RL_3DofSerialRobot.cpp  RLearning.cpp  find_dynamixel.cpp  multi_motors_demo.cpp  my_dxl_controller.cpp  my_dxl_master.cpp  my_operator.cpp  observer.cpp  parallel_robot_master.cpp  templete.cpp  trajectory_generator.cpp
