<?xml version="1.0"?>
<package format="2">
  <name>my_dynamixel_workbench</name>
  <version>0.0.0</version>
  <description>The my_dynamixel_workbench package</description>


  <maintainer email="parker@todo.todo">parker</maintainer>

  <license>TODO</license>



  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>dynamixel_workbench_toolbox</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>dynamixel_workbench_toolbox</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>message_generation</build_export_depend>

  <exec_depend>dynamixel_workbench_toolbox</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_generation</exec_depend>

  <depend>geometry_msgs</depend>
  <depend>dynamixel_workbench_msgs</depend>
  <depend>yaml-cpp</depend>
  <depend>eigen</depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
